--- a/src/main/java/app/frontend/UserInterface.form
+++ b/src/main/java/app/frontend/UserInterface.form
@@ -2482,7 +2482,7 @@
           <Color blue="39" green="39" red="39" type="rgb"/>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[0, 25]"/>
+          <Dimension value="[0, 26]"/>
         </Property>
       </Properties>
       <AuxValues>
@@ -2524,7 +2524,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Component id="jLabel11" alignment="0" max="32767" attributes="0"/>
               <Component id="jLabel12" alignment="0" max="32767" attributes="0"/>
-              <Component id="menuView" alignment="0" pref="25" max="32767" attributes="0"/>
+              <Component id="menuView" alignment="0" pref="26" max="32767" attributes="0"/>
               <Component id="jLabel13" alignment="0" max="32767" attributes="0"/>
               <Component id="menuGeometry" alignment="0" max="32767" attributes="0"/>
               <Component id="jLabel14" alignment="0" max="32767" attributes="0"/>
@@ -2964,14 +2964,14 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabel1" pref="40" max="32767" attributes="0"/>
+                  <Component id="jLabel1" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jLabel1" alignment="0" pref="40" max="32767" attributes="0"/>
+              <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
@@ -3004,7 +3004,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jLateralPanel" pref="322" max="32767" attributes="0"/>
+              <Component id="jLateralPanel" pref="321" max="32767" attributes="0"/>
               <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
@@ -3030,7 +3030,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="322" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="321" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
